# AntinoriFinancials

./: .replit  README.md  create_sample_model_portfolio.py  flask_app.py  generate_summaries.py  main.py  main.py.bak  nohup.out  optimize_portfolio_risk.py  optimized_find_matching_risk_stat.py  optimized_find_matching_risk_stat_implementation.py  package-lock.json  package.json  process_data_dump.py  pyproject.toml  risk_stats_update_endpoint.py  run.py  run_data_upload.py  schedule_risk_stats_update.py  service.py  start_server.sh  start_with_timeout.sh  test_bond_pattern_matching.py  test_data_load.py  test_egnyte_api.py  test_egnyte_service.py  test_fixed_income_matching.py  test_portfolio_risk.py  test_portfolio_risk_metrics.py  test_query.sql  test_risk_metrics.py  test_risk_stats_processing.py  update_risk_stats.py  update_risk_stats_optimized.py  upload_data_dump.py  validate_fixed_income_matching.py  wsgi.py
_archive/: asgi.py  flask_app.py
attached_assets/: Pasted--Hard-Currency-Section-table-className-min-w-full-text-sm-border-collapse--1746730518213.txt  Pasted--Portfolio1-pm-classification-equity-total-62-5--1746564477179.txt  Pasted-Comprehensive-ANTINORI-Development-Plan-for-Replit-Project-Overview-The-ANTINORI-project-is-a-full-1746063861319.txt  Pasted-Database-insert-failed-psycopg2-errors-CardinalityViolation-ON-CONFLICT-DO-UPDATE-command-cannot--1746803455629.txt  Pasted-Database-insert-failed-psycopg2-errors-CardinalityViolation-ON-CONFLICT-DO-UPDATE-command-cannot--1746805176513.txt  noridatadump.txt  noriownershipexample.txt  (+15 more)
frontend/: index.html  (+5 more)
(+43 files in other folders)
